tests/parsing/smtlib/v2.6/errors/025_var_binding_bad_name_2.smt2
(set-logic ALL)
(assert (let ((as 42)) true))
