tests/parsing/smtlib/v2.6/errors/025_var_binding_bad_name_2.expected
File "", line 1, character 31-33:
Error (025) while parsing a variable binding, read the reserved word 'as',
      but expected a symbol (i.e. variable name).

